chore: fix alignment issue

--- a/src/components/Molecules/ArticleCard/ArticleCard.scss
+++ b/src/components/Molecules/ArticleCard/ArticleCard.scss
@@ -7,13 +7,16 @@
     box-sizing: content-box;
     background-color: var(--grey9);
 
+    display: flex;
+    flex-direction: column;
+
     &:hover {
         background-color: var(--grey8);
     }
 
     .article-content {
         box-sizing: content-box !important;
-        padding: 0.5rem 1rem;
+        padding: 1rem;
 
         .date {
             font-size: 0.8125rem;
